<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DicodingEventApp</string>
    <string name="hello_pren" tools:keep="@string/hello_pren">Welcome to Dicoding Event App</string>
    <string name="recommended_event" tools:keep="@string/recommended_event">Recommended event for you!</string>
    <string name="event_image">event image</string>
    <string name="event_name">Event name</string>
    <string name="event_begin">Event begin</string>
    <string name="event_begin_label">Begin label</string>
    <string name="event_location">Event location</string>
    <string name="event_description">Event description</string>
    <string name="title_activity_home" tools:keep="@string/title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" tools:keep="@string/hello_blank_fragment">Hello blank fragment</string>
    <string name="upcoming" tools:keep="@string/upcoming">This is Upcoming Fragment</string>
    <string name="finished" tools:keep="@string/finished">This is Finished Fragment</string>
    <string name="register">Register</string>
    <string name="event_quota">available quota</string>
    <string name="event_summary">event_summary</string>
    <string name="event_owner">event_owner</string>
    <string name="event_owner_label">Event owner:</string>
    <string name="title_favorite">Favorite</string>
    <string name="add_to_favorites">add_to_favorites</string>
    <string name="category">event_category</string>
    <string name="title_setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="event_location_label">Event Location</string>
</resources>